@@ -1,5 +1,13 @@
 2001-01-09  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/menus.c (GetMenuOptions):
+	properly handle missing width and height arguments if reference
+	rectangle of position hints
+	(get_prefered_popup_position):
+	(MenuInteraction):
+	(select_menu_item):
+	fixed menu placement
+
 	* fvwm/icons.c (CreateIconWindow):
 	* fvwm/events.c (HandlePropertyNotify):
 	different definition of active icons
